--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
                         <p class="aside-text fs-6 fw-600 text-light">
                             Ishlaysizmi ?
                         </p>
-                        <select class="aside-turi  p-1" style="width:260px" name="" id="">
+                        <select class="aside-ish  p-1" style="width:260px" name="" id="">
                             <option value="Nima ish qilishingizni belgilang">Nima ish qilishingizni belgilang</option>
                             <option value="Ishlayman">Ishlayman</option>
                             <option value="Talaba">Talaba</option>
@@ -68,7 +68,7 @@
                         <p class="aside-text fs-6 fw-600 text-light">
                             Dars vaqti
                         </p>
-                        <select class="aside-turi p-1" style="width:260px" name="" id="">
+                        <select class="aside-vaqti p-1" style="width:260px" name="" id="">
                             <option value="Kurs vaqtini tanlang">Kurs vaqtini tanlang</option>
                             <option value="08:00 - 12:00">08:00 - 12:00</option>
                             <option value="12:00 - 16:00">12:00 - 16:00</option>
@@ -131,7 +131,7 @@
 
 
                     </form>
-                    <table class="table d-none text-light mt-4 pt-4">
+                    <table class="table  text-light mt-4 pt-4">
                         <thead  >
                             <tr>
                                 <th scope="col">#</th>
@@ -144,7 +144,7 @@
                                 <th scope="col">Kelish manbasi</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody class="tbody">
                             <tr>
                                 <th scope="row">1</th>
                                 <td>Mark</td>
