--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
                             Dars vaqti
                         </p>
                         <select class="aside-vaqti p-1" style="width:260px" name="" id="">
-                            <option value="Kurs vaqtini tanlang">Kurs vaqtini tanlang</option>
+                            <option value="Kurs vaqtini tanlang" selected >Kurs vaqtini tanlang</option>
                             <option value="08:00 - 12:00">08:00 - 12:00</option>
                             <option value="12:00 - 16:00">12:00 - 16:00</option>
                             <option value="16:00 - 22:00">16:00 - 22:00</option>
@@ -125,16 +125,17 @@
 
                         </div>
                         <div class="col-2">
-                            <button type="button" class="main-delete btn btn-danger  px-4">O'chirish</button></div>
+                            <button  class="main-delete btn btn-danger  ">O'chirish</button></div>
                         <div class="col-2">
-                            <button class="main-add  btn btn-dark px-4">Qo'shish</button></div>
+                            <button  class="main-add  btn btn-dark ">Qo'shish</button>
+                        </div>
 
 
                     </form>
                     <table class="table  text-light mt-4 pt-4">
                         <thead  >
                             <tr>
-                                <th scope="col">#</th>
+                                <!-- <th scope="col">#</th> -->
                                 <th scope="col">Ism</th>
                                 <th scope="col">Telefon</th>
                                 <th scope="col">Kurs</th>
@@ -144,19 +145,7 @@
                                 <th scope="col">Kelish manbasi</th>
                             </tr>
                         </thead>
-                        <tbody class="tbody">
-                            <tr>
-                                <th scope="row">1</th>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                            </tr>
-
-                        </tbody>
+                        
                     </table>
                 </div>
             </div>
