--- a/public/index.html
+++ b/public/index.html
@@ -110,26 +110,17 @@
                     </div>
                 </nav>
                 <div class="main-form mt-4 pt-4 ">
-                    <form class="row form ">
-                        <div class="col-3">
-                            <input type="text" class="main-name form-control" minlength="3" required
+                    <form class="row form-control form"> 
+                            <input required type="text" class="main-name form-control" minlength="3" 
                                 placeholder="Ismingizni kiriting" aria-label="First name">
-                        </div>
-                        <div class="col-3">
-                            <input type="number" class="main-tel form-control" min="3" required placeholder="Telefon raqam"
-                                aria-label="Last name">
-                        </div>
-                        <div class="col-2">
+                       
+                            <input required type="number" class="main-tel form-control" min="3" placeholder="Telefon raqam"
+                                aria-label="Last name"> 
+                        
                             <input class="main-not-found form-control bg-warning" placeholder="To'ldirilmagan" value="To'ldirilmagan"
-                                type="submit" aria-label="Last name">
-
-                        </div>
-                        <div class="col-2">
-                            <button  class="main-delete btn btn-danger  ">O'chirish</button></div>
-                        <div class="col-2">
-                            <button  class="main-add  btn btn-dark ">Qo'shish</button>
-                        </div>
-
+                                  aria-label="Last name"> 
+                                <button    class="main-add  btn btn-dark ">Qo'shish</button>
+                            <button  class="main-delete btn btn-danger  ">O'chirish</button>  
 
                     </form>
                     <table class="table  text-light mt-4 pt-4">
