--- a/public/index.html
+++ b/public/index.html
@@ -136,6 +136,9 @@
                                 <th scope="col-2">Kelish manbasi</th>
                             </tr>
                         </thead>
+                        <tbody class="tbody">
+
+                        </tbody>
                         
                     </table>
                 </div>
