--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
                     </div>
 
                     <div class="">
-                        <a href="#" class="">
+                        <a href="https://t.me/it_time" class="">
                             <img style="width:30px;height:30px" src="../img/Vector (2).png" alt="">
                         </a>
                     </div>
@@ -112,10 +112,10 @@
                 <div class="main-form mt-4 pt-4 ">
                     <div class="row d-flex justify-content-between align-items-center">
                     <form class="col-9 d-flex form justify-content-between  g-3"> 
-                            <input required type="text" class="main-name col-4 " minlength="3" 
+                            <input required type="text" class="main-name col-4 px-2" minlength="3" 
                                 placeholder="Ismingizni kiriting" aria-label="First name">
                        
-                            <input required type="number" class="main-tel  col-4" min="3" placeholder="Telefon raqam"
+                            <input required type="number" class="main-tel px-2 col-4" min="3" placeholder="Telefon raqam"
                                 aria-label="Last name"> 
                         
                             <!-- <input class="main-not-found form-control bg-warning" placeholder="To'ldirilmagan" value="To'ldirilmagan"
